[package]
name = "mud"
version = "0.1.0"
authors = ["oopsfoo <oopsfoo@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
rustc-link-search = ["./external/NetFilter_SDK/x64_capi/"]
rustc-link-lib = ["nfapi"]

[build-dependencies]
bindgen = "0.53.1"

[dependencies]
