[package]
name = "mud"
version = "0.1.0"
authors = ["oopsfoo <oopsfoo@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
rustc-link-search = ["./external/NetFilter_SDK/x64_capi/"]
rustc-link-lib = ["nfapi"]

[build-dependencies]

[dependencies]
log = { version = "0.4", features = ["std", "serde"] }
simplelog = { version = "0.10.0"}
shadowsocks = "1.11.1"
futures = "0.3.15"
simple-dns = { version = "0.1.1" }
tokio = { version = "1", features = ["full"] }
#winapi = { version = "0.3", features = ["winsock2","ws2def","ws2ipdef"]}